Ingress/ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: <namespace>
  annotations:
    # Specifies which Ingress controller to use — "gce" means Google Cloud Load Balancer (GCE Ingress)
    kubernetes.io/ingress.class: "gce"
     # Allow HTTP traffic
    kubernetes.io/ingress.allow-http: "true" 
     # Used to assign a fixed IP to the GCP load balancer instead of a random one
    kubernetes.io/ingress.global-static-ip-name: <static ip name>
    # SSL cert via Let's Encrypt
    cert-manager.io/issuer: letsencrypt-production
    # Enable WebSocket support
    ingress.gcp.kubernetes.io/enable-websockets: "true"
spec:
  tls:
  - hosts:
      - <your-host>
    secretName: tls-secret
  rules:
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: /sample-1
        backend:
          service:
            name: sample-1
            port:
              number: 3000
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: /sample-2
        backend:
          service:
            name: sample-2
            port:
              number: 3000
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-3
            port:
              number: 3000
  - host: "<your-host>"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sample-4
            port:
              number: 3000
